--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "@fortawesome/fontawesome-svg-core": "^6.6.0",
         "@fortawesome/free-solid-svg-icons": "^6.6.0",
         "@fortawesome/react-fontawesome": "^0.2.2",
+        "@fullcalendar/common": "^5.11.5",
         "@fullcalendar/core": "^6.1.15",
         "@fullcalendar/daygrid": "^6.1.15",
         "@fullcalendar/google-calendar": "^6.1.15",
@@ -22,6 +23,7 @@
         "@testing-library/user-event": "^13.5.0",
         "axios": "^1.7.7",
         "cors": "^2.8.5",
+        "date-fns": "^4.1.0",
         "express": "^4.19.2",
         "googleapis": "^144.0.0",
         "lodash": "^4.17.21",
@@ -59,5 +61,8 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
     }
 }
